# -FDE-AI-Take-Home-Mansi-Joshi

./: Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/chroma/2c884dce-a505-48c7-bf00-1ec4035a72f2/: index_metadata.pickle
pdfs/14/: 14_qa.jsonl
pdfs/39/: 39_qa.jsonl
pdfs/5/: 5_qa.jsonl
pdfs/6/: 6_qa.jsonl
scripts/: ingest.py
src/: config.py
src/embeddings/: __init__.py  embedder.py
src/ingestion/: __init__.py  chunker.py  pdf_parser.py
src/llm/: __init__.py  answerer.py
src/mcp_server/: server.py
src/retrieval/: __init__.py  retriever.py
src/vectorstore/: __init__.py  store.py
tests/: test_smoke.py
